--- a/index.html
+++ b/index.html
@@ -3,12 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fitness-web site</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <div class="header-container">
+            <h1><i>Fitness</i></h1>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="" class="active">HOME</a></li>
+                    <li><a href="">Service</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">About</a></li>
+                </ul> 
+            </nav>
+            <span class="icon"><i class="fa-solid fa-bars "></i></span>
+        </div>
+        <div class="banner-container">
+            <div class="banner-contain">
+                <h1>Get body in<br><span class="shape">ohape</span>& stay <br> healthy</h1>
+                <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
+
+                <div class="button-group">
+                    <button class="btn-peraimary">Join<span class="club-part"> Club</span> Now!</button>
+                    <button class="btn-peraimary-2">Download App</button>
+                </div>
+            </div>
+            <div class="images-contain">
+                <img src="images/Images 2.png" alt="">
+                <div class="card-1">
+                    <h3>500+</h3>
+                    <p>Free Workout Videos</p>
+                </div>
+                <div class="card-2">
+                    <button class="button"></button>
+                    <div class="iner-card">
+                        <h3>350+</h3>
+                        <p>Video tutorial</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
