--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="banner-container">
             <div class="banner-contain">
-                <h1>Get body in<br><span class="shape">ohape</span>& stay <br> healthy</h1>
+                <h1>Get body in<br><span class="shape">ohape</span>& stay<br>healthy</h1>
                 <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
 
                 <div class="button-group">
@@ -49,7 +49,34 @@
     </header>
     <main>
         <section>
-            
+            <div class="container">
+                <div class="text-contain">
+                    <h1>Change Your Habits</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div>
+                <div class="img-container">
+                       <div class="img-iteam">
+                        <img src="images/image 3.png" alt="">
+                        <h3>Movement</h3>
+                        <h4>We believe fitness should be <br> accessible to everyone</h4>
+                       </div>
+                       <div class="img-iteam">
+                        <img src="images/image 2.png" alt="">
+                        <h3>Time</h3>
+                        <h4>We believe fitness should be <br> accessible to everyone</h4>
+                       </div>
+                       <div class="img-iteam">
+                        <img src="images/image 4.png" alt="">
+                        <h3>Practice</h3>
+                        <h4>We believe fitness should be <br> accessible to everyone</h4>
+                       </div>
+                       <div class="img-iteam">
+                        <img src="images/image 5.png" alt="">
+                        <h3>Weight Loss</h3>
+                        <h4>We believe fitness should be <br> accessible to everyone</h4>
+                       </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
