--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="banner-container">
             <div class="banner-contain">
-                <h1>Get body in<br><span class="shape">ohape</span>& stay<br>healthy</h1>
+                <h1>Get body in <br><span class="shape">ohape</span>& stay<br>healthy</h1>
                 <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
 
                 <div class="button-group">
@@ -75,6 +75,20 @@
                         <h3>Weight Loss</h3>
                         <h4>We believe fitness should be <br> accessible to everyone</h4>
                        </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="run-part">
+            <div class="run-container">
+                <div class="run-text">
+                    <h1>Run an Extra <br>
+                        Mile Easily</h1>
+                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                    <button class="btn-peraimary-1">join now</button>
+                </div>
+                <div class="img-card">
+                    <img src="images/run.jpg" alt="">
                 </div>
             </div>
         </section>
