training part done

--- a/index.html
+++ b/index.html
@@ -84,11 +84,42 @@
                 <div class="run-text">
                     <h1>Run an Extra <br>
                         Mile Easily</h1>
-                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                    <p>We believe fitness should be accessible to everyone,everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
                     <button class="btn-peraimary-1">join now</button>
                 </div>
                 <div class="img-card">
                     <img src="images/run.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="training-part">
+                <div class="taxt-part">
+                    <h1>Trainings and Exercises</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or<br>access to a gym.</p>
+
+                    <div class="training-container-1">
+                        <div class="img-items-1">
+                            <h4>Lorem Ipsum</h4>
+                        </div>
+                        <div class="img-items-2">
+                            <h4>Lorem Ipsum</h4>
+                        </div>
+                        <div class="img-items-3">
+                            <h4>Leg Press: Works the<br>quadriceps and glutes</h4>
+                        </div>
+                    </div>
+                    <div class="training-container-2">
+                        <div class="img-items-4">
+                            <h4><span id="spen-1">Lorem Ipsum</span><span class="display-iteam">Leg Press: Works the<br>quadriceps and glutes</span></h4>
+                        </div>
+                        <div class="img-items-5">
+                            <h4><span id="spen-1">Lorem Ipsum</span><span class="display-iteam">Leg Press: Works the<br>quadriceps and glutes</span></h4>
+                        </div>
+                        <div class="img-items-6">
+                            <h4>Leg Press: Works the<br>quadriceps and glutes</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
