--- a/index.html
+++ b/index.html
@@ -183,6 +183,48 @@
 
             </div>
         </section>
+        <section class="our-part">
+            <div class="our-container">
+                <div class="our-contain">
+                    <h1>Meet Our Team</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym.</p>
+
+                    <div class="bg-container">
+                       <div class="bg-part-1">
+                        <div class="img-container-1">
+                            <h3>Jerome Bell</h3>
+                            <h5>Trainer</h5>
+                        </div>
+                        <div class="img-container-2">
+                            <h3>Cameron willi</h3>
+                            <h5>Trainer</h5>
+                        </div>
+                        <div class="img-container-3">
+                            <h3>Darrell steward</h3>
+                            <h5>Trainer</h5>
+                        </div>
+                      
+                       </div>
+                       <div class="bg-part-2">
+                        <div class="img-container-4">
+                            <h3>Dianne Russell</h3>
+                            <h5>Trainer</h5>
+                        </div>
+                        <div class="img-container-5">
+                            <h3>Cody fisher</h3>
+                            <h5>Trainer</h5>
+                        </div>
+                        <div class="img-container-6">
+                            <h3>Theresa Webb</h3>
+                            <h5>Trainer</h5>
+                        </div>
+                       </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
