--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <!-- calculator part -->
         <div class="BMI">
             <h1>BMI Calculator</h1>
-            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of <br>income or access to a gym.</p>
         </div>
         <section>
             <div class="BM-container">
