our service done

--- a/index.html
+++ b/index.html
@@ -183,6 +183,43 @@
 
             </div>
         </section>
+
+        <section class="our-section">
+            <div class="our-Service">
+                <h1>Our <span class="our-text">Service</span></h1>
+                <div class="our-img-container">
+                    <div class="bg-1">
+                        <div class="row">
+                            <img src="images/image1.jpg" alt="">
+                            <h5>Physical Fitness</h5>
+                        </div>
+                        <div class="row">
+                            <img src="images/image2.jpg" alt="">
+                            <h5>Weight Gain</h5>
+                        </div>
+                        <div class="row">
+                           <img src="images/image3.jpg" alt="">
+                            <h5>Strength Training</h5>
+                        </div>
+                      
+                       </div>
+                       <div class="bg-2">
+                        <div class="row">
+                            <img src="images/image4.jpg" alt="">
+                            <h5>Fat Lose</h5>
+                        </div>
+                        <div class="row">
+                            <img src="images/image5.jpg" alt="">
+                            <h5>Weightlifting</h5>
+                        </div>
+                        <div class="row">
+                            <img src="images/about.jpg" alt="">
+                            <h5>Running</h5>
+                        </div>
+                       </div>
+                </div>
+            </div>
+        </section>
         <section class="our-part">
             <div class="our-container">
                 <div class="our-contain">
