footer responsive done

--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
 
                     <div class="training-container-1">
                         <div class="img-items-1">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Leg Press: Works the <br>
+                                quadriceps and glutes</h4>
                         </div>
                         <div class="img-items-2">
-                            <h4>Lorem Ipsum</h4>
+                            <h4>Leg Press: Works the <br>
+                                quadriceps and glutes</h4>
                         </div>
                         <div class="img-items-3">
                             <h4>Leg Press: Works the<br>quadriceps and glutes</h4>
@@ -263,6 +265,32 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-contain">
+                <div class="footer-item-1">
+                    <h1>Fitness</h1>
+                    <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                </div>
+                <div class="footer-item">
+                    <h4>Get Started</h4>
+                    <h5>Service</h5>
+                    <h5>Contact Us</h5>
+                    <h5>Affiliate Program</h5>
+                    <h5>About Us</h5>
+                </div>
+                <div class="footer-item">
+                    <h4>Get Started</h4>
+                    <h5>Fitness</h5>
+                    <h5>Platform</h5>
+                    <h5>Workout Libary</h5>
+                    <h5>App Design</h5>
+                </div>
+                
+            </div>
+        <p class="pera">All right reserved @Fitness 2024</p>
+
+        </div>
+    </footer>
 </body>
 </html>
